# newsletter_service

./: .env_template  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_all_newsletter.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_lognewsletter_server_answer_and_more.py
mailing/templates/mailing/: base.html  client_form.html  client_list.html  home.html  lognewsletter_detail.html  lognewsletter_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html
mailing/templates/mailing/includes/: inc_footer.html  inc_nav_bar.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_comment_alter_user_first_name_and_more.py
users/templates/users/: confirm_register.html  login.html  register.html  user_form.html
