[tool.poetry]
name = "newsletter-service"
version = "0.1.0"
description = ""
authors = ["glebokhlopkov <glebka_90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pillow = "^10.2.0"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
django-crontab = "^0.7.1"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
